Added GitHub source code link

--- a/index.html
+++ b/index.html
@@ -110,7 +110,14 @@
           </div>
         </div>
         <div class="footer">
-          <p>Coded by Allison Maurer</p>
+          <p>
+            <a
+              href="https://github.com/allisonmrr/weather-app"
+              class="github-link"
+              >Open-source code</a
+            >
+            by Allison Maurer
+          </p>
         </div>
       </div>
     </div>
