--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             <a
               href="https://github.com/allisonmrr/weather-app"
               class="github-link"
+              target="_blank"
               >Open-source code</a
             >
             by Allison Maurer
