Updated weather icon

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="time" id="time-id">This is where the time goes</div>
           <div class="dayOverview" id="dayOverview">Partly Cloudy</div>
           <div class="emoji" id="emoji">
-            <i class="fas fa-cloud-showers-heavy"></i>
+            <img src="http://openweathermap.org/img/wn/01d@2x.png" />
           </div>
           <div class="currentTemp">
             <span class="temp" id="current-temp-id">79</span>
@@ -97,7 +97,7 @@
           <div class="col">
             <div class="forecastDay">Thursday</div>
             <div class="forecastIcon">
-              <i class="fas fa-cloud-sun"></i>
+              <i class="fas fa-cloud-showers-heavy"></i>
             </div>
             <div class="forecastTemp">79º <span>61º</span></div>
           </div>
