Updated current weather section html and css

--- a/index.html
+++ b/index.html
@@ -54,16 +54,20 @@
           </div>
         </form>
         <div class="cityInfo">
-          <div class="city" id="city-id">Minneapolis</div>
-          <div class="time" id="time-id">This is where the time goes</div>
-          <div class="dayOverview" id="dayOverview">Partly Cloudy</div>
-          <div class="emoji" id="emoji">
-            <img src="http://openweathermap.org/img/wn/01d@2x.png" />
-          </div>
-          <div class="currentTemp">
-            <span class="temp" id="current-temp-id">79</span>
-          </div>
-          <div class="highLow">H: 79º L: 63º</div>
+          <h1 class="city" id="city-id">Minneapolis</h1>
+          <ul>
+            <li class="time" id="time-id">This is where the time goes></li>
+            <li class="dayOverview" id="dayOverview">Partly Cloudy</li>
+            <li class="temp" id="current-temp-id">79ºF</li>
+            <div class="emoji" id="emoji">
+              <img
+                class="currentEmoji"
+                src="http://openweathermap.org/img/wn/01d@2x.png"
+              />
+            </div>
+            <li class="humidity" id="humidity">Humidity: 57%</li>
+            <li class="wind" id="wind">Wind: 3.09 km/h</li>
+          </ul>
         </div>
         <div class="row sixDays">
           <div class="col">
